k8sapps/k8s-ingress-deploy/busybox_deploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: busybox-app
  namespace: kube-test-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-app
  template:
    metadata:
      labels:
        app: busybox-app
    spec:
      containers:
      - name: busybox-app
        image: localhost:5000/busybox
        command: ["sh", "-c", "while true; do echo 'hello'; sleep 5; done;"]
