k8sapps/k8s-ingress-deploy/mock_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-service-lb
  namespace: kube-test-ns
  labels:
    name: kube-mock-service
spec:
  type: LoadBalancer
  ports:
  - port: 17891
    targetPort: 17891
    protocol: TCP
  selector:
    app: mock-app
